@@ -28,7 +28,7 @@ Alien::automake                                = 0.15
 Alien::Autotools                               = 1.05
 Alien::Base::ModuleBuild                       = 1.14
 Alien::bison                                   = 0.21
-Alien::Build                                   = 2.22
+Alien::Build                                   = 2.23
 Alien::Build::Git                              = 0.08
 Alien::Build::MB                               = 0.07
 Alien::Build::Plugin::Decode::SourceForge      = 0.02
@@ -53,7 +53,8 @@ Alien::help2man                                = 0.01
 Alien::Hunspell                                = 0.16
 Alien::Libarchive3                             = 0.29
 Alien::Libbz2                                  = 0.24
-Alien::libnewrelic                             = 0.02
+Alien::libnewrelic                             = 0.04
+Alien::libpcre                                 = 0.01
 Alien::Librdkafka                              = 1.05
 Alien::LibreSSL                                = 0.03
 Alien::libuuid                                 = 0.04
@@ -66,11 +67,11 @@ Alien::MSYS                                    = 0.14
 Alien::nasm                                    = 0.22
 Alien::Nettle                                  = 0.04
 Alien::patch                                   = 0.15
-Alien::pkgconf                                 = 0.16
+Alien::pkgconf                                 = 0.17
 Alien::Role::Alt                               = 0.05
 Alien::Role::Dino                              = 0.06
 Alien::unzip                                   = 0.03
-Alien::wasmtime                                = 0.08
+Alien::wasmtime                                = 0.10
 Alien::xz                                      = 0.06
 ;Alt::Alien::cmake::System                     = 0.0402
 ;Alt::Alien::FFI::System                       = 0.21
@@ -99,7 +100,7 @@ Browser::Start                                 = 0.01
 Class::Inspector                               = 1.36
 Devel::ebug                                    = 0.60
 Dist::Zilla::App::Command::aliendeps           = 0.03
-Dist::Zilla::Plugin::AlienBuild                = 0.30
+Dist::Zilla::Plugin::AlienBuild                = 0.31
 Dist::Zilla::Plugin::Alt                       = 0.07
 Dist::Zilla::Plugin::CommentOut                = 0.01
 Dist::Zilla::Plugin::CSS::Compressor           = 0.02
@@ -117,7 +118,7 @@ FFI                                            = 1.15
 FFI::C                                         = 0.08
 FFI::CheckLib                                  = 0.27
 FFI::ExtractSymbols                            = 0.03
-FFI::Platypus                                  = 1.26
+FFI::Platypus                                  = 1.28
 FFI::Platypus::Lang::CPP                       = 0.04
 FFI::Platypus::Lang::CPP::Demangle::XS         = 0.03
 FFI::Platypus::Lang::Fortran                   = 0.11
@@ -141,13 +142,13 @@ Log::Log4perl::Appender::TAP                   = 0.04
 Module::Build::FFI                             = 0.52
 Mojolicious::Plugin::Ident                     = 0.31
 Mojolicious::Plugin::TtRenderer                = 1.60
-NewFangle                                      = 0.01
+NewFangle                                      = 0.02
 PeekPoke::FFI                                  = 0.02
 Perl::Critic::Plicease                         = 0.03
 Photography::DX                                = 0.02
 Photography::EV                                = 0.07
 PkgConfig                                      = 0.23026
-PkgConfig::LibPkgConf                          = 0.10
+PkgConfig::LibPkgConf                          = 0.11
 Shell::Config::Generate                        = 0.34
 Shell::Guess                                   = 0.09
 String::Template                               = 0.21
@@ -169,7 +170,7 @@ Test2::Tools::URL                              = 0.05
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
-Wasm                                           = 0.09
+Wasm                                           = 0.10
 Wasm::Hook                                     = 0.02
 WebService::DailyConnect                       = 0.02
 Win32::ErrorMode                               = 0.06
