@@ -1,7 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Updated my dists to latest
   - Removed deprecated WebService::Livejournal
+  - Added Alien::libpcre
 
 2.17      2020-05-14 19:26:28 -0400
   - Updated my dists to latest
